--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
         <div class="owl-carousel owl-theme mb-8">
             <div class="item"><img src="image-1.jpeg?imwidth=800" alt="Image 1" class="rounded-lg"></div>
             <div class="item"><img src="image-2.jpeg?imwidth=800" alt="Image 2" class="rounded-lg"></div>
-            <div class="item"><img src="https://dbz-images.dubizzle.com/images/2024/05/25/e710f0152bce4040b7bbf32a862263a7-.jpeg?imwidth=800" alt="Image 3" class="rounded-lg"></div>
-            <div class="item"><img src="https://dbz-images.dubizzle.com/images/2024/05/25/c2ce9b3f90604255aeca6e4058b152e0-.jpeg?imwidth=800" alt="Image 4" class="rounded-lg"></div>
-            <div class="item"><img src="https://dbz-images.dubizzle.com/images/2024/05/25/e68fd891b18c4fd998de77851d0e8b96-.jpeg?imwidth=800" alt="Image 5" class="rounded-lg"></div>
-            <div class="item"><img src="https://dbz-images.dubizzle.com/images/2024/05/25/77bf14ef47804f60b961a21f91e1e825-.jpeg?imwidth=800" alt="Image 6" class="rounded-lg"></div>
-            <div class="item"><img src="https://dbz-images.dubizzle.com/images/2024/05/25/180119ad53874fa6aaaf9cb0ebd9c93f-.jpeg?imwidth=800" alt="Image 7" class="rounded-lg"></div>
-            <div class="item"><img src="https://dbz-images.dubizzle.com/images/2024/05/25/b46574a8b4e241d6b9917f59cbaa5cc3-.jpeg?imwidth=800" alt="Image 8" class="rounded-lg"></div>
+            <div class="item"><img src="image-3.jpeg?imwidth=800" alt="Image 3" class="rounded-lg"></div>
+            <div class="item"><img src="image-4.jpeg??imwidth=800" alt="Image 4" class="rounded-lg"></div>
+            <div class="item"><img src="image-5.jpeg??imwidth=800" alt="Image 5" class="rounded-lg"></div>
+            <div class="item"><img src="image-6.jpeg??imwidth=800" alt="Image 6" class="rounded-lg"></div>
+            <div class="item"><img src="image-7.jpeg?" alt="Image 7" class="rounded-lg"></div>
+            <div class="item"><img src="image-8.jpeg??imwidth=800" alt="Image 8" class="rounded-lg"></div>
         </div>
 
         <!-- Listing Details -->
         <div class="p-4 bg-white shadow-md rounded-md mb-8">
             <div class="flex justify-between items-center">
                 <div>
-                    <span class="text-lg font-bold">AED 2,900</span>
+                    <span class="text-lg font-bold">AED 3,000</span>
                     <span class="text-sm text-gray-600">/ Monthly</span>
                 </div>
             </div>
@@ -70,7 +70,7 @@
             </div>
 
             <div class="mt-4">
-                <h2 class="text-lg font-semibold">Fully furnished room available in a luxury villa in Abu Hail for families for AED 2,900/month including DEWA and WiFi.</h2>
+                <h2 class="text-lg font-semibold">Fully furnished room available in a luxury villa in Abu Hail for families for AED 3,000/month including DEWA and WiFi.</h2>
             </div>
 
             <div class="mt-4">
@@ -89,7 +89,7 @@
                     </div>
                     <div>
                         <div class="text-gray-600">Attached Bathroom</div>
-                        <div class="font-semibold">No</div>
+                        <div class="font-semibold">Yes</div>
                     </div>
                     <div>
                         <div class="text-gray-600">Balcony</div>
@@ -97,15 +97,15 @@
                     </div>
                     <div>
                         <div class="text-gray-600">Preferred Tenants</div>
-                        <div class="font-semibold">Couples</div>
+                        <div class="font-semibold">Couples,Families,Ladies</div>
                     </div>
                     <div>
                         <div class="text-gray-600">Number of Tenants</div>
                         <div class="font-semibold">3</div>
                     </div>
                     <div>
-                        <div class="text-gray-600">Updated</div>
-                        <div class="font-semibold">15th June 2024</div>
+                        <div class="text-gray-600">Available From</div>
+                        <div class="font-semibold">30th June 2024</div>
                     </div>
                 </div>
             </div>
