--- a/index.html
+++ b/index.html
@@ -14,39 +14,79 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <style>
+        .responsive-iframe {
+            position: relative;
+            padding-bottom: 56.25%;
+            height: 0;
+            overflow: hidden;
+            max-width: 100%;
+            height: auto;
+        }
+        .responsive-iframe iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+        .owl-carousel .item img {
+            width: 100%;
+            height: auto;
+            display: block;
+        }
+        .owl-carousel .item {
+            margin-bottom: 10px;
+        }
+    </style>
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "RealEstateListing",
+            "name": "Furnished Room in Abu Hail",
+            "description": "Fully furnished room available in a luxury villa in Abu Hail for families for AED 3,000/month including DEWA and WiFi.",
+            "address": {
+                "@type": "PostalAddress",
+                "streetAddress": "16 4th St",
+                "addressLocality": "Abu Hail, Deira",
+                "addressRegion": "Dubai",
+                "postalCode": "00000",
+                "addressCountry": "UAE"
+            },
+            "rent": {
+                "@type": "MonetaryAmount",
+                "currency": "AED",
+                "value": "3000",
+                "interval": "mo"
+            },
+            "availableFrom": "2024-06-30",
+            "category": "Private Room",
+            "amenities": [
+                "Dryer",
+                "Free Parking",
+                "Kitchen Appliances"
+            ],
+            "seller": {
+                "@type": "Person",
+                "name": "Kuttippa Pk",
+                "url": "https://wa.me/971552391896"
+            }
+        }
+    </script>
 </head>
-  <style>
-    .responsive-iframe {
-    position: relative;
-    padding-bottom: 56.25%; /* 16:9 */
-    height: 0;
-    overflow: hidden;
-    max-width: 100%;
-    height: auto;
-}
-.responsive-iframe iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
-
-  </style>
 
 <body class="bg-gray-100">
     <div class="container mx-auto p-4">
-
         <!-- Image Carousel -->
         <div class="owl-carousel owl-theme mb-8">
             <div class="item"><img src="image-1.jpeg?imwidth=800" alt="Image 1" class="rounded-lg"></div>
             <div class="item"><img src="image-2.jpeg?imwidth=800" alt="Image 2" class="rounded-lg"></div>
             <div class="item"><img src="image-3.jpeg?imwidth=800" alt="Image 3" class="rounded-lg"></div>
-            <div class="item"><img src="image-4.jpeg??imwidth=800" alt="Image 4" class="rounded-lg"></div>
-            <div class="item"><img src="image-5.jpeg??imwidth=800" alt="Image 5" class="rounded-lg"></div>
-            <div class="item"><img src="image-6.jpeg??imwidth=800" alt="Image 6" class="rounded-lg"></div>
-            <div class="item"><img src="image-7.jpeg?" alt="Image 7" class="rounded-lg"></div>
-            <div class="item"><img src="image-8.jpeg??imwidth=800" alt="Image 8" class="rounded-lg"></div>
+            <div class="item"><img src="image-4.jpeg?imwidth=800" alt="Image 4" class="rounded-lg"></div>
+            <div class="item"><img src="image-5.jpeg?imwidth=800" alt="Image 5" class="rounded-lg"></div>
+            <div class="item"><img src="image-6.jpeg?imwidth=800" alt="Image 6" class="rounded-lg"></div>
+            <div class="item"><img src="image-7.jpeg?imwidth=800" alt="Image 7" class="rounded-lg"></div>
+            <div class="item"><img src="image-8.jpeg?imwidth=800" alt="Image 8" class="rounded-lg"></div>
         </div>
 
         <!-- Listing Details -->
@@ -57,7 +97,6 @@
                     <span class="text-sm text-gray-600">/ Monthly</span>
                 </div>
             </div>
-
             <div class="mt-4">
                 <div class="flex items-center">
                     <img src="https://static.dubizzle.com/frontend-web/static-resources/assets/images/private_room.svg" alt="private_room" class="w-5 h-5" />
@@ -68,11 +107,9 @@
                     <span class="ml-2 text-gray-700">Abu Hail, Deira, Dubai, UAE</span>
                 </div>
             </div>
-
             <div class="mt-4">
                 <h2 class="text-lg font-semibold">Fully furnished room available in a luxury villa in Abu Hail for families for AED 3,000/month including DEWA and WiFi.</h2>
             </div>
-
             <div class="mt-4">
                 <div class="grid grid-cols-2 gap-4">
                     <div>
@@ -109,7 +146,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="mt-4">
                 <p class="text-gray-700">Villa is located in Abu Hail near Hamriyah opposite to waterfront market. Only families or ladies are allowed in the villa. Bedrooms are furnished with inbuilt cupboards, bed, mattress, dining table, sofa, and chairs. Fully equipped kitchen with a cooking range, fridge, and washing machine. WiFi and DEWA included.</p>
             </div>
@@ -159,9 +195,8 @@
 
         <!-- SEO Paragraph -->
         <div class="p-4 bg-white shadow-md rounded-md">
-            <p class="text-gray-700">This fully furnished villa in Abu Hail, Dubai, offers a luxurious living experience for families and couples. With amenities including a dryer, free parking, and kitchen appliances, this private room is ideal for those seeking comfort and convenience. Located near Hamriyah opposite to waterfront market, the villa provides easy access to essential services and entertainment. Renting at AED 2,900 per month, inclusive of DEWA and WiFi, this villa is a perfect choice for families and ladies. Secure your stay in this premium villa and enjoy a serene and well-furnished living space in Deira, Dubai.</p>
+            <p class="text-gray-700">This fully furnished villa in Abu Hail, Dubai, offers a luxurious living experience for families and couples. With amenities including a dryer, free parking, and kitchen appliances, this private room is ideal for those seeking comfort and convenience. Located near Hamriyah opposite to waterfront market, the villa provides easy access to essential services and entertainment. Renting at AED 3,000 per month, inclusive of DEWA and WiFi, this villa is a perfect choice for families and ladies. Secure your stay in this premium villa and enjoy a serene and well-furnished living space in Deira, Dubai.</p>
         </div>
-
     </div>
 
     <script>
