--- a/index.html
+++ b/index.html
@@ -35,9 +35,6 @@
             height: auto;
             display: block;
         }
-        .owl-carousel .item {
-            margin-bottom: 10px;
-        }
     </style>
     <script type="application/ld+json">
         {
@@ -79,14 +76,30 @@
     <div class="container mx-auto p-4">
         <!-- Image Carousel -->
         <div class="owl-carousel owl-theme mb-8">
-            <div class="item"><img src="image-1.jpeg?imwidth=800" alt="Image 1" class="rounded-lg"></div>
-            <div class="item"><img src="image-2.jpeg?imwidth=800" alt="Image 2" class="rounded-lg"></div>
-            <div class="item"><img src="image-3.jpeg?imwidth=800" alt="Image 3" class="rounded-lg"></div>
-            <div class="item"><img src="image-4.jpeg?imwidth=800" alt="Image 4" class="rounded-lg"></div>
-            <div class="item"><img src="image-5.jpeg?imwidth=800" alt="Image 5" class="rounded-lg"></div>
-            <div class="item"><img src="image-6.jpeg?imwidth=800" alt="Image 6" class="rounded-lg"></div>
-            <div class="item"><img src="image-7.jpeg?imwidth=800" alt="Image 7" class="rounded-lg"></div>
-            <div class="item"><img src="image-8.jpeg?imwidth=800" alt="Image 8" class="rounded-lg"></div>
+            <div class="item">
+                <img src="image-1.jpeg?imwidth=800" alt="Image 1" class="rounded-lg object-cover w-full h-64 md:h-80 lg:h-96">
+            </div>
+            <div class="item">
+                <img src="image-2.jpeg?imwidth=800" alt="Image 2" class="rounded-lg object-cover w-full h-64 md:h-80 lg:h-96">
+            </div>
+            <div class="item">
+                <img src="image-3.jpeg?imwidth=800" alt="Image 3" class="rounded-lg object-cover w-full h-64 md:h-80 lg:h-96">
+            </div>
+            <div class="item">
+                <img src="image-4.jpeg?imwidth=800" alt="Image 4" class="rounded-lg object-cover w-full h-64 md:h-80 lg:h-96">
+            </div>
+            <div class="item">
+                <img src="image-5.jpeg?imwidth=800" alt="Image 5" class="rounded-lg object-cover w-full h-64 md:h-80 lg:h-96">
+            </div>
+            <div class="item">
+                <img src="image-6.jpeg?imwidth=800" alt="Image 6" class="rounded-lg object-cover w-full h-64 md:h-80 lg:h-96">
+            </div>
+            <div class="item">
+                <img src="image-7.jpeg?imwidth=800" alt="Image 7" class="rounded-lg object-cover w-full h-64 md:h-80 lg:h-96">
+            </div>
+            <div class="item">
+                <img src="image-8.jpeg?imwidth=800" alt="Image 8" class="rounded-lg object-cover w-full h-64 md:h-80 lg:h-96">
+            </div>
         </div>
 
         <!-- Listing Details -->
