--- a/index.html
+++ b/index.html
@@ -35,6 +35,19 @@
             height: auto;
             display: block;
         }
+          .carousel-image {
+    height: 200px; /* Default height for small screens */
+  }
+  @media (min-width: 768px) {
+    .carousel-image {
+      height: 300px; /* Height for medium screens */
+    }
+  }
+  @media (min-width: 1024px) {
+    .carousel-image {
+      height: 400px; /* Height for large screens */
+    }
+  }
     </style>
     <script type="application/ld+json">
         {
@@ -75,32 +88,33 @@
 <body class="bg-gray-100">
     <div class="container mx-auto p-4">
         <!-- Image Carousel -->
-        <div class="owl-carousel owl-theme mb-8">
-            <div class="item">
-                <img src="image-1.jpeg?imwidth=800" alt="Image 1" class="rounded-lg object-cover w-full h-64 md:h-80 lg:h-96">
-            </div>
-            <div class="item">
-                <img src="image-2.jpeg?imwidth=800" alt="Image 2" class="rounded-lg object-cover w-full h-64 md:h-80 lg:h-96">
-            </div>
-            <div class="item">
-                <img src="image-3.jpeg?imwidth=800" alt="Image 3" class="rounded-lg object-cover w-full h-64 md:h-80 lg:h-96">
-            </div>
-            <div class="item">
-                <img src="image-4.jpeg?imwidth=800" alt="Image 4" class="rounded-lg object-cover w-full h-64 md:h-80 lg:h-96">
-            </div>
-            <div class="item">
-                <img src="image-5.jpeg?imwidth=800" alt="Image 5" class="rounded-lg object-cover w-full h-64 md:h-80 lg:h-96">
-            </div>
-            <div class="item">
-                <img src="image-6.jpeg?imwidth=800" alt="Image 6" class="rounded-lg object-cover w-full h-64 md:h-80 lg:h-96">
-            </div>
-            <div class="item">
-                <img src="image-7.jpeg?imwidth=800" alt="Image 7" class="rounded-lg object-cover w-full h-64 md:h-80 lg:h-96">
-            </div>
-            <div class="item">
-                <img src="image-8.jpeg?imwidth=800" alt="Image 8" class="rounded-lg object-cover w-full h-64 md:h-80 lg:h-96">
-            </div>
-        </div>
+    <div class="owl-carousel owl-theme mb-8">
+    <div class="item">
+        <img src="image-1.jpeg?imwidth=800" alt="Image 1" class="rounded-lg object-cover w-full carousel-image">
+    </div>
+    <div class="item">
+        <img src="image-2.jpeg?imwidth=800" alt="Image 2" class="rounded-lg object-cover w-full carousel-image">
+    </div>
+    <div class="item">
+        <img src="image-3.jpeg?imwidth=800" alt="Image 3" class="rounded-lg object-cover w-full carousel-image">
+    </div>
+    <div class="item">
+        <img src="image-4.jpeg?imwidth=800" alt="Image 4" class="rounded-lg object-cover w-full carousel-image">
+    </div>
+    <div class="item">
+        <img src="image-5.jpeg?imwidth=800" alt="Image 5" class="rounded-lg object-cover w-full carousel-image">
+    </div>
+    <div class="item">
+        <img src="image-6.jpeg?imwidth=800" alt="Image 6" class="rounded-lg object-cover w-full carousel-image">
+    </div>
+    <div class="item">
+        <img src="image-7.jpeg?imwidth=800" alt="Image 7" class="rounded-lg object-cover w-full carousel-image">
+    </div>
+    <div class="item">
+        <img src="image-8.jpeg?imwidth=800" alt="Image 8" class="rounded-lg object-cover w-full carousel-image">
+    </div>
+</div>
+
 
         <!-- Listing Details -->
         <div class="p-4 bg-white shadow-md rounded-md mb-8">
@@ -212,20 +226,21 @@
         </div>
     </div>
 
-    <script>
-        $(document).ready(function(){
-            $(".owl-carousel").owlCarousel({
-                items: 1,
-                loop: true,
-                margin: 10,
-                nav: true,
-                dots: true,
-                autoplay: true,
-                autoplayTimeout: 3000,
-                autoplayHoverPause: true
-            });
+<script>
+    $(document).ready(function(){
+        $(".owl-carousel").owlCarousel({
+            items: 1,
+            loop: true,
+            margin: 10,
+            nav: true,
+            dots: true,
+            autoplay: true,
+            autoplayTimeout: 3000,
+            autoplayHoverPause: true
         });
-    </script>
+    });
+</script>
+
 </body>
 
 </html>
