--- a/index.html
+++ b/index.html
@@ -175,6 +175,8 @@
         </div>
 
         <!-- Amenities -->
+        <div class="p-4 bg-white shadow-md rounded-md mb-8">
+            <h2 class="text-lg font-semibold">Amenities</h2>
         <div class="grid grid-cols-3 gap-4 mt-2">
     <div class="flex flex-col items-center">
         <img src="https://static.dubizzle.com/frontend-web/static-resources/assets/images/dryer_.svg" alt="dryer_" class="w-10 h-10" />
@@ -189,7 +191,7 @@
         <span class="mt-2 text-gray-700 whitespace-nowrap">Kitchen Appliances</span>
     </div>
 </div>
-
+</div>
 
         <!-- Map View -->
         <div class="p-4 bg-white shadow-md rounded-md mb-8">
