--- a/index.html
+++ b/index.html
@@ -177,20 +177,21 @@
         <!-- Amenities -->
         <div class="p-4 bg-white shadow-md rounded-md mb-8">
             <h2 class="text-lg font-semibold">Amenities</h2>
-        <div class="grid grid-cols-3 gap-4 mt-2">
+     <div class="grid grid-cols-3 gap-4 mt-2 md:grid-cols-3 sm:grid-cols-1">
     <div class="flex flex-col items-center">
         <img src="https://static.dubizzle.com/frontend-web/static-resources/assets/images/dryer_.svg" alt="dryer_" class="w-10 h-10" />
-        <span class="mt-2 text-gray-700 whitespace-nowrap">Dryer</span>
+        <span class="mt-2 text-gray-700">Dryer</span>
     </div>
     <div class="flex flex-col items-center">
         <img src="https://static.dubizzle.com/frontend-web/static-resources/assets/images/Free Parking.svg" alt="Free Parking" class="w-10 h-10" />
-        <span class="mt-2 text-gray-700 whitespace-nowrap">Free Parking</span>
+        <span class="mt-2 text-gray-700">Free Parking</span>
     </div>
     <div class="flex flex-col items-center">
         <img src="https://static.dubizzle.com/frontend-web/static-resources/assets/images/builtin_kitchen_appliances.svg" alt="builtin_kitchen_appliances" class="w-10 h-10" />
-        <span class="mt-2 text-gray-700 whitespace-nowrap">Kitchen Appliances</span>
+        <span class="mt-2 text-gray-700">Kitchen Appliances</span>
     </div>
 </div>
+
 </div>
 
         <!-- Map View -->
