--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
       height: 400px; /* Height for large screens */
     }
   }
+
+        @media (max-width: 500px) {
+  .custom-sm\:grid-cols-1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+}
+
     </style>
     <script type="application/ld+json">
         {
@@ -178,6 +185,7 @@
         <div class="p-4 bg-white shadow-md rounded-md mb-8">
             <h2 class="text-lg font-semibold">Amenities</h2>
      <div class="grid grid-cols-3 gap-4 mt-2 md:grid-cols-3 sm:grid-cols-1">
+<div class="grid grid-cols-3 gap-4 mt-2 custom-sm:grid-cols-1">
     <div class="flex flex-col items-center">
         <img src="https://static.dubizzle.com/frontend-web/static-resources/assets/images/dryer_.svg" alt="dryer_" class="w-10 h-10" />
         <span class="mt-2 text-gray-700">Dryer</span>
@@ -191,6 +199,7 @@
         <span class="mt-2 text-gray-700">Kitchen Appliances</span>
     </div>
 </div>
+
 
 </div>
 
