--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         <div class="p-4 bg-white shadow-md rounded-md mb-8">
             <h2 class="text-lg font-semibold">Amenities</h2>
      <div class="grid grid-cols-3 gap-4 mt-2 md:grid-cols-3 sm:grid-cols-1">
-<div class="grid grid-cols-3 gap-4 mt-2 sm:grid-cols-1 sm:justify-items-center sm:text-center">
+<div class="grid grid-cols-1 gap-4 mt-2 sm:grid-cols-3">
     <div class="flex flex-col items-center">
         <img src="https://static.dubizzle.com/frontend-web/static-resources/assets/images/dryer_.svg" alt="dryer_" class="w-10 h-10" />
         <span class="mt-2 text-gray-700">Dryer</span>
