--- a/index.html
+++ b/index.html
@@ -45,32 +45,7 @@
     }
   }
 
-        @media (max-width: 500px) {
-  .custom-sm\:grid-cols-1 {
-    grid-template-columns: repeat(1, minmax(0, 1fr));
-  }
-}
-        @media (max-width: 500px) {
-  .sm\:grid-cols-1 {
-    grid-template-columns: 1fr;
-  }
-  .sm\:justify-items-center {
-    justify-items: center;
-  }
-}
-
-@media (max-width: 500px) {
-  .sm\:grid-cols-1 {
-    grid-template-columns: 1fr;
-  }
-  .sm\:justify-items-center {
-    justify-items: center;
-  }
-  .sm\:text-center {
-    text-align: center;
-  }
-}
-
+    
     </style>
     <script type="application/ld+json">
         {
@@ -202,27 +177,22 @@
         </div>
 
         <!-- Amenities -->
-        <div class="p-4 bg-white shadow-md rounded-md mb-8">
-            <h2 class="text-lg font-semibold">Amenities</h2>
-     <div class="grid grid-cols-3 gap-4 mt-2 md:grid-cols-3 sm:grid-cols-1">
-<div class="grid grid-cols-1 gap-4 mt-2 sm:grid-cols-3">
-    <div class="flex flex-col items-center">
-        <img src="https://static.dubizzle.com/frontend-web/static-resources/assets/images/dryer_.svg" alt="dryer_" class="w-10 h-10" />
-        <span class="mt-2 text-gray-700">Dryer</span>
+    <div class="p-4 bg-white shadow-md rounded-md mb-8">
+    <h2 class="text-lg font-semibold">Amenities</h2>
+    <div class="grid grid-cols-1 gap-4 mt-2 sm:grid-cols-1 md:grid-cols-3">
+        <div class="flex flex-col items-center">
+            <img src="https://static.dubizzle.com/frontend-web/static-resources/assets/images/dryer_.svg" alt="dryer_" class="w-10 h-10" />
+            <span class="mt-2 text-gray-700">Dryer</span>
+        </div>
+        <div class="flex flex-col items-center">
+            <img src="https://static.dubizzle.com/frontend-web/static-resources/assets/images/Free Parking.svg" alt="Free Parking" class="w-10 h-10" />
+            <span class="mt-2 text-gray-700">Free Parking</span>
+        </div>
+        <div class="flex flex-col items-center">
+            <img src="https://static.dubizzle.com/frontend-web/static-resources/assets/images/builtin_kitchen_appliances.svg" alt="builtin_kitchen_appliances" class="w-10 h-10" />
+            <span class="mt-2 text-gray-700">Kitchen Appliances</span>
+        </div>
     </div>
-    <div class="flex flex-col items-center">
-        <img src="https://static.dubizzle.com/frontend-web/static-resources/assets/images/Free Parking.svg" alt="Free Parking" class="w-10 h-10" />
-        <span class="mt-2 text-gray-700">Free Parking</span>
-    </div>
-    <div class="flex flex-col items-center">
-        <img src="https://static.dubizzle.com/frontend-web/static-resources/assets/images/builtin_kitchen_appliances.svg" alt="builtin_kitchen_appliances" class="w-10 h-10" />
-        <span class="mt-2 text-gray-700">Kitchen Appliances</span>
-    </div>
-</div>
-
-
-
-
 </div>
 
         <!-- Map View -->
