--- a/index.html
+++ b/index.html
@@ -136,40 +136,41 @@
                 <h2 class="text-lg font-semibold">Fully furnished room available in a luxury villa in Abu Hail for families for AED 3,000/month including DEWA and WiFi.</h2>
             </div>
             <div class="mt-4">
-                <div class="grid grid-cols-2 gap-4">
-                    <div>
-                        <div class="text-gray-600">Type</div>
-                        <div class="font-semibold">Villa</div>
-                    </div>
-                    <div>
-                        <div class="text-gray-600">Room Type</div>
-                        <div class="font-semibold">Private Room</div>
-                    </div>
-                    <div>
-                        <div class="text-gray-600">Security Deposit</div>
-                        <div class="font-semibold">AED 1,000</div>
-                    </div>
-                    <div>
-                        <div class="text-gray-600">Attached Bathroom</div>
-                        <div class="font-semibold">Yes</div>
-                    </div>
-                    <div>
-                        <div class="text-gray-600">Balcony</div>
-                        <div class="font-semibold">No</div>
-                    </div>
-                    <div>
-                        <div class="text-gray-600">Preferred Tenants</div>
-                        <div class="font-semibold">Couples,Families,Ladies</div>
-                    </div>
-                    <div>
-                        <div class="text-gray-600">Number of Tenants</div>
-                        <div class="font-semibold">3</div>
-                    </div>
-                    <div>
-                        <div class="text-gray-600">Available From</div>
-                        <div class="font-semibold">30th June 2024</div>
-                    </div>
-                </div>
+               <div class="grid grid-cols-2 gap-4">
+    <div>
+        <div class="text-gray-600">Type</div>
+        <div class="font-semibold">Villa</div>
+    </div>
+    <div>
+        <div class="text-gray-600">Room Type</div>
+        <div class="font-semibold">Private Room</div>
+    </div>
+    <div>
+        <div class="text-gray-600">Security Deposit</div>
+        <div class="font-semibold">AED 1,000</div>
+    </div>
+    <div>
+        <div class="text-gray-600">Attached Bathroom</div>
+        <div class="font-semibold">Yes</div>
+    </div>
+    <div>
+        <div class="text-gray-600">Balcony</div>
+        <div class="font-semibold">No</div>
+    </div>
+    <div>
+        <div class="text-gray-600">Preferred Tenants</div>
+        <div class="font-semibold text-sm sm:text-base md:text-lg lg:text-xl xl:text-2xl">Couples, Families, Ladies</div>
+    </div>
+    <div>
+        <div class="text-gray-600">Number of Tenants</div>
+        <div class="font-semibold">3</div>
+    </div>
+    <div>
+        <div class="text-gray-600">Available From</div>
+        <div class="font-semibold">30th June 2024</div>
+    </div>
+</div>
+
             </div>
             <div class="mt-4">
                 <p class="text-gray-700">Villa is located in Abu Hail near Hamriyah opposite to waterfront market. Only families or ladies are allowed in the villa. Bedrooms are furnished with inbuilt cupboards, bed, mattress, dining table, sofa, and chairs. Fully equipped kitchen with a cooking range, fridge, and washing machine. WiFi and DEWA included.</p>
