--- a/index.html
+++ b/index.html
@@ -3,11 +3,25 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Fully furnished room available in a luxury villa in Abu Hail for families for AED 3,000/month including DEWA and WiFi.">
-    <meta name="keywords" content="room, villa, furnished, Abu Hail, Dubai, DEWA, WiFi, rent">
-    <meta name="author" content="Kuttippa Pk">
-    <title>Furnished Room in Abu Hail</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="Discover luxurious, fully furnished villas available for monthly rent in Deira and Abu Hail. Perfect for families and professionals.">
+<meta name="keywords" content="fully furnished villa, monthly rented villa, affordable villas, family villas, short-term rental villas, luxury villas, furnished accommodation, Deira, Abu Hail, Dubai, DEWA, WiFi, rent">
+<meta name="author" content="Kuttippa Pk">
+<title>Fully Furnished Villas for Monthly Rent in Deira and Abu Hail</title>
+
+<!-- Open Graph Meta Tags -->
+<meta property="og:title" content="Fully Furnished Villas for Monthly Rent in Deira and Abu Hail">
+<meta property="og:description" content="Discover luxurious, fully furnished villas available for monthly rent in Deira and Abu Hail. Perfect for families and professionals.">
+<meta property="og:image" content="image-1.jpeg?imwidth=800">
+<meta property="og:type" content="website">
+
+<!-- Twitter Card Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Fully Furnished Villas for Monthly Rent in Deira and Abu Hail">
+<meta name="twitter:description" content="Discover luxurious, fully furnished villas available for monthly rent in Deira and Abu Hail. Perfect for families and professionals.">
+<meta name="twitter:image" content="image-1.jpeg?imwidth=800">
+
+    <title>Fully Furnished Villas for Monthly Rent in Deira and Abu Hail</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
@@ -31,28 +45,26 @@
             height: 100%;
         }
         
-          .carousel-image {
-    height: 200px; /* Default height for small screens */
-  }
-  @media (min-width: 768px) {
-    .carousel-image {
-      height: 300px; /* Height for medium screens */
-    }
-  }
-  @media (min-width: 1024px) {
-    .carousel-image {
-      height: 400px; /* Height for large screens */
-    }
-  }
-
-    
+        .carousel-image {
+            height: 200px; /* Default height for small screens */
+        }
+        @media (min-width: 768px) {
+            .carousel-image {
+                height: 300px; /* Height for medium screens */
+            }
+        }
+        @media (min-width: 1024px) {
+            .carousel-image {
+                height: 400px; /* Height for large screens */
+            }
+        }
     </style>
     <script type="application/ld+json">
         {
             "@context": "https://schema.org",
             "@type": "RealEstateListing",
-            "name": "Furnished Room in Abu Hail",
-            "description": "Fully furnished room available in a luxury villa in Abu Hail for families for AED 3,000/month including DEWA and WiFi.",
+            "name": "Fully Furnished Villas for Monthly Rent in Deira and Abu Hail",
+            "description": "Discover luxurious, fully furnished villas available for monthly rent in Deira and Abu Hail. Perfect for families and professionals.",
             "address": {
                 "@type": "PostalAddress",
                 "streetAddress": "16 4th St",
@@ -86,33 +98,32 @@
 <body class="bg-gray-100">
     <div class="container mx-auto p-4">
         <!-- Image Carousel -->
-    <div class="owl-carousel owl-theme mb-8">
-    <div class="item">
-        <img src="image-1.jpeg?imwidth=800" alt="Image 1" class="rounded-lg object-cover w-full carousel-image">
-    </div>
-    <div class="item">
-        <img src="image-2.jpeg?imwidth=800" alt="Image 2" class="rounded-lg object-cover w-full carousel-image">
-    </div>
-    <div class="item">
-        <img src="image-3.jpeg?imwidth=800" alt="Image 3" class="rounded-lg object-cover w-full carousel-image">
-    </div>
-    <div class="item">
-        <img src="image-4.jpeg?imwidth=800" alt="Image 4" class="rounded-lg object-cover w-full carousel-image">
-    </div>
-    <div class="item">
-        <img src="image-5.jpeg?imwidth=800" alt="Image 5" class="rounded-lg object-cover w-full carousel-image">
-    </div>
-    <div class="item">
-        <img src="image-6.jpeg?imwidth=800" alt="Image 6" class="rounded-lg object-cover w-full carousel-image">
-    </div>
-    <div class="item">
-        <img src="image-7.jpeg?imwidth=800" alt="Image 7" class="rounded-lg object-cover w-full carousel-image">
-    </div>
-    <div class="item">
-        <img src="image-8.jpeg?imwidth=800" alt="Image 8" class="rounded-lg object-cover w-full carousel-image">
-    </div>
-</div>
-
+        <div class="owl-carousel owl-theme mb-8">
+            <div class="item">
+                <img src="image-1.jpeg?imwidth=800" alt="Fully furnished villa living room in Deira" class="rounded-lg object-cover w-full carousel-image">
+            </div>
+            <div class="item">
+                <img src="image-2.jpeg?imwidth=800" alt="Furnished bedroom in Abu Hail villa" class="rounded-lg object-cover w-full carousel-image">
+            </div>
+            <div class="item">
+                <img src="image-3.jpeg?imwidth=800" alt="Luxury kitchen in Deira villa" class="rounded-lg object-cover w-full carousel-image">
+            </div>
+            <div class="item">
+                <img src="image-4.jpeg?imwidth=800" alt="Living area in Abu Hail villa" class="rounded-lg object-cover w-full carousel-image">
+            </div>
+            <div class="item">
+                <img src="image-5.jpeg?imwidth=800" alt="Spacious villa in Deira" class="rounded-lg object-cover w-full carousel-image">
+            </div>
+            <div class="item">
+                <img src="image-6.jpeg?imwidth=800" alt="Modern villa in Abu Hail" class="rounded-lg object-cover w-full carousel-image">
+            </div>
+            <div class="item">
+                <img src="image-7.jpeg?imwidth=800" alt="Comfortable bedroom in Deira villa" class="rounded-lg object-cover w-full carousel-image">
+            </div>
+            <div class="item">
+                <img src="image-8.jpeg?imwidth=800" alt="Villa amenities in Abu Hail" class="rounded-lg object-cover w-full carousel-image">
+            </div>
+        </div>
 
         <!-- Listing Details -->
         <div class="p-4 bg-white shadow-md rounded-md mb-8">
@@ -136,41 +147,40 @@
                 <h2 class="text-lg font-semibold">Fully furnished room available in a luxury villa in Abu Hail for families for AED 3,000/month including DEWA and WiFi.</h2>
             </div>
             <div class="mt-4">
-               <div class="grid grid-cols-2 gap-4">
-    <div>
-        <div class="text-gray-600">Type</div>
-        <div class="font-semibold">Villa</div>
-    </div>
-    <div>
-        <div class="text-gray-600">Room Type</div>
-        <div class="font-semibold">Private Room</div>
-    </div>
-    <div>
-        <div class="text-gray-600">Security Deposit</div>
-        <div class="font-semibold">AED 1,000</div>
-    </div>
-    <div>
-        <div class="text-gray-600">Attached Bathroom</div>
-        <div class="font-semibold">Yes</div>
-    </div>
-    <div>
-        <div class="text-gray-600">Balcony</div>
-        <div class="font-semibold">No</div>
-    </div>
-    <div>
-        <div class="text-gray-600">Preferred Tenants</div>
-        <div class="font-semibold text-sm sm:text-base md:text-lg lg:text-xl xl:text-2xl">Couples, Families, Ladies</div>
-    </div>
-    <div>
-        <div class="text-gray-600">Number of Tenants</div>
-        <div class="font-semibold">3</div>
-    </div>
-    <div>
-        <div class="text-gray-600">Available From</div>
-        <div class="font-semibold">30th June 2024</div>
-    </div>
-</div>
-
+                <div class="grid grid-cols-2 gap-4">
+                    <div>
+                        <div class="text-gray-600">Type</div>
+                        <div class="font-semibold">Villa</div>
+                    </div>
+                    <div>
+                        <div class="text-gray-600">Room Type</div>
+                        <div class="font-semibold">Private Room</div>
+                    </div>
+                    <div>
+                        <div class="text-gray-600">Security Deposit</div>
+                        <div class="font-semibold">AED 1,000</div>
+                    </div>
+                    <div>
+                        <div class="text-gray-600">Attached Bathroom</div>
+                        <div class="font-semibold">Yes</div>
+                    </div>
+                    <div>
+                        <div class="text-gray-600">Balcony</div>
+                        <div class="font-semibold">No</div>
+                    </div>
+                    <div>
+                        <div class="text-gray-600">Preferred Tenants</div>
+                        <div class="font-semibold text-sm sm:text-base md:text-lg lg:text-xl xl:text-2xl">Couples, Families, Ladies</div>
+                    </div>
+                    <div>
+                        <div class="text-gray-600">Number of Tenants</div>
+                        <div class="font-semibold">3</div>
+                    </div>
+                    <div>
+                        <div class="text-gray-600">Available From</div>
+                        <div class="font-semibold">30th June 2024</div>
+                    </div>
+                </div>
             </div>
             <div class="mt-4">
                 <p class="text-gray-700">Villa is located in Abu Hail near Hamriyah opposite to waterfront market. Only families or ladies are allowed in the villa. Bedrooms are furnished with inbuilt cupboards, bed, mattress, dining table, sofa, and chairs. Fully equipped kitchen with a cooking range, fridge, and washing machine. WiFi and DEWA included.</p>
@@ -178,23 +188,23 @@
         </div>
 
         <!-- Amenities -->
-    <div class="p-4 bg-white shadow-md rounded-md mb-8">
-    <h2 class="text-lg font-semibold">Amenities</h2>
-    <div class="grid grid-cols-1 gap-4 mt-2 sm:grid-cols-1 md:grid-cols-3">
-        <div class="flex flex-col items-center">
-            <img src="https://static.dubizzle.com/frontend-web/static-resources/assets/images/dryer_.svg" alt="dryer_" class="w-10 h-10" />
-            <span class="mt-2 text-gray-700">Dryer</span>
+        <div class="p-4 bg-white shadow-md rounded-md mb-8">
+            <h2 class="text-lg font-semibold">Amenities</h2>
+            <div class="grid grid-cols-1 gap-4 mt-2 sm:grid-cols-1 md:grid-cols-3">
+                <div class="flex flex-col items-center">
+                    <img src="https://static.dubizzle.com/frontend-web/static-resources/assets/images/dryer_.svg" alt="Dryer in villa" class="w-10 h-10" />
+                    <span class="mt-2 text-gray-700">Dryer</span>
+                </div>
+                <div class="flex flex-col items-center">
+                    <img src="https://static.dubizzle.com/frontend-web/static-resources/assets/images/Free Parking.svg" alt="Free Parking at villa" class="w-10 h-10" />
+                    <span class="mt-2 text-gray-700">Free Parking</span>
+                </div>
+                <div class="flex flex-col items-center">
+                    <img src="https://static.dubizzle.com/frontend-web/static-resources/assets/images/builtin_kitchen_appliances.svg" alt="Kitchen Appliances in villa" class="w-10 h-10" />
+                    <span class="mt-2 text-gray-700">Kitchen Appliances</span>
+                </div>
+            </div>
         </div>
-        <div class="flex flex-col items-center">
-            <img src="https://static.dubizzle.com/frontend-web/static-resources/assets/images/Free Parking.svg" alt="Free Parking" class="w-10 h-10" />
-            <span class="mt-2 text-gray-700">Free Parking</span>
-        </div>
-        <div class="flex flex-col items-center">
-            <img src="https://static.dubizzle.com/frontend-web/static-resources/assets/images/builtin_kitchen_appliances.svg" alt="builtin_kitchen_appliances" class="w-10 h-10" />
-            <span class="mt-2 text-gray-700">Kitchen Appliances</span>
-        </div>
-    </div>
-</div>
 
         <!-- Map View -->
         <div class="p-4 bg-white shadow-md rounded-md mb-8">
@@ -225,20 +235,20 @@
         </div>
     </div>
 
-<script>
-    $(document).ready(function(){
-        $(".owl-carousel").owlCarousel({
-            items: 1,
-            loop: true,
-            margin: 10,
-            nav: true,
-            dots: true,
-            autoplay: true,
-            autoplayTimeout: 3000,
-            autoplayHoverPause: true
+    <script>
+        $(document).ready(function(){
+            $(".owl-carousel").owlCarousel({
+                items: 1,
+                loop: true,
+                margin: 10,
+                nav: true,
+                dots: true,
+                autoplay: true,
+                autoplayTimeout: 3000,
+                autoplayHoverPause: true
+            });
         });
-    });
-</script>
+    </script>
 
 </body>
 
